--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <title>Line Vercel Bot Public</title>
 </head>
 <body>
-  <h1>こんにちは！WAN'S Dog Expo</h1>
+  <h1>こんにちは！</h1>
   <p>このページはVercelにデプロイされました。</p>
 </body>
 </html>
